--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     <li><a href="#services">Services</a></li>
     <li><a href="#voice">Voice</a></li>
     <li><a href="#access">Access</a></li>
-    <li><a href="#reservation.html">Reservation</a></li>
+    <li><a href="reservation.html">Reservation</a></li>
   </ul>
 </nav>
 
